Fixed horizontal scrollbar

--- a/src/css/components/_about.scss
+++ b/src/css/components/_about.scss
@@ -15,7 +15,7 @@
  
   &:before {
     position: absolute;
-    width: 100vw;
+    width: 100%;
     background-color: white;
     right: 50%;
     transform: translateX(50%);
