--- a/src/css/components/_scrollprogress.scss
+++ b/src/css/components/_scrollprogress.scss
@@ -3,7 +3,7 @@
     position: fixed;
     top: 0;
     left: 0;
-    width: 100vw;
+    width: 100%;
     height: 5px;
     z-index: 99;
     background-color: palette(grey, light);
