--- a/src/css/components/_work.scss
+++ b/src/css/components/_work.scss
@@ -9,7 +9,7 @@
     left: 50%;
     z-index: -1;
     display: block;
-    width: 100vw;
+    width: 100%;
     height: calc(100% + 100px);
     content: "";
     background-color: palette(blue);
